# Realm

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  CMakeBuild.sh  CMakeLists.txt  DebugBuild.sh  README.md  build.py  build_unix.py  build_windows.py  format.sh  lint-fix.sh  lint.sh
libs/: CMakeLists.txt
shaders/: bloom.frag  bloom.vert  pbr.frag  pbr.vert  pbr_simple.frag  post.frag  shadow.vert  simple.frag  simple.vert  skybox.frag  skybox.vert
shaders/ibl/: brdfconvolution.frag  brdfconvolution.vert  diffuseirradiance.frag  diffuseirradiance.vert  hdricube.frag  specularenv.frag  specularenv.vert
src/: config_manager.cpp  config_manager.h  engine.cpp  engine.h  global_context.cpp  global_context.h  input.cpp  input.h  logger.cpp  logger.h  main.cpp  math.h  utils.h  window.cpp  window.h
src/gameplay/: camera_controller.cpp  camera_controller.h  component.cpp  component.h  entity.cpp  entity.h  model.cpp  model.h  scene.cpp  scene.h
src/gameplay/components/: mesh_renderer_comp.cpp  mesh_renderer_comp.h  transform_comp.cpp  transform_comp.h
src/plateform/: plateform.cpp  plateform.h
src/render/: bloom_framebuffer.cpp  bloom_framebuffer.h  cube.cpp  cube.h  framebuffer.cpp  framebuffer.h  fullscreen_quad.cpp  fullscreen_quad.h  graphic_res_manager.cpp  graphic_res_manager.h  hdr_texture.cpp  hdr_texture.h  hdri_cube.cpp  hdri_cube.h  render_camera.cpp  render_camera.h  render_entity.cpp  render_entity.h  render_light.cpp  render_light.h  render_material.cpp  render_material.h  render_mesh.cpp  render_mesh.h  render_model.cpp  render_model.h  render_object.cpp  render_object.h  render_pass.cpp  render_pass.h  render_pipeline.cpp  render_pipeline.h  render_resource.cpp  render_resource.h  render_scene.cpp  render_scene.h  render_swap_buffer.cpp  render_swap_buffer.h  renderer.cpp  renderer.h  (+10 more)
src/render/ibl/: brdf_convolution_framebuffer.cpp  brdf_convolution_framebuffer.h  cubemap_framebuffer.cpp  cubemap_framebuffer.h  diffuse_irradiance_map.cpp  diffuse_irradiance_map.h  equirectangular_cubemap.cpp  equirectangular_cubemap.h  mipmap_cubemap_framebuffer.cpp  mipmap_cubemap_framebuffer.h  specular_map.cpp  specular_map.h
src/resource/: asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  config_manager.cpp  config_manager.h  entity.h  material.cpp  material.h  mesh.cpp  mesh.h
src/resource/datatype/model/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  node.cpp  node.h
src/resource/importer/: model_importer.cpp  model_importer.h
